--- a/src/model/report/list/table/Header.css
+++ b/src/model/report/list/table/Header.css
@@ -42,7 +42,8 @@
     .quantity,
     .deviceCode,
     .condition,
-    .deliveryDate {
+    .deliveryDate,
+    .updateOrDelete{
         width: auto;
     }
 }
